initial talk commit

--- a/2020_October_Bulbulia_VUW_BIOTALK/main.tex
+++ b/2020_October_Bulbulia_VUW_BIOTALK/main.tex
@@ -296,7 +296,7 @@
 
 
 \begin{alertblock}{(dis)Satisfaction with New Zealand's environment}
-Satisfaction with quality of New Zealand’s natural environment.
+Satisfaction with quality of New Zealand's natural environment.
 \end{alertblock}
 
 % \begin{alertblock}{~}
