--- a/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.Rmd
+++ b/Bulbulia_Biola_Talk_EcologyReligion_Jan2021.Rmd
@@ -197,11 +197,14 @@ equatiomatic::extract_eq(eqa, wrap = TRUE, mean_separate	= TRUE )
 
 <div class="notes">
 We quantitatively consider: 
+
   1. *Between Person Differences*: "How do political and religious commitments predict ecological attitudes and behaviors"; 
   2. *Time Trends*: "How are these relationships changing overtime"
   3. *Within Person Differences*: "how does change within an individual in political and religious commitments affect ecological attitudes and behaviors?"
   4. *Comparative Dynamics*: "How do these trends within/between individuals differ for political and religious commitments
-  5. References: Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality & Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods & Research, 1–28. https://doi.org/10.1177/0049124120914934 // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge
+  5. References: 
+  - https://easystats.github.io/parameters/reference/demean.html
+  - Bafumi J, Gelman A. 2006. Fitting Multilevel Models When Predictors and Group Effects Correlate. In. Philadelphia, PA: Annual meeting of the American Political Science Association // Bell A, Jones K. 2015. Explaining Fixed Effects: Random Effects Modeling of Time-Series Cross-Sectional and Panel Data. Political Science Research and Methods, 3(1), 133–153. // Bell A, Fairbrother M, Jones K. 2019. Fixed and Random Effects Models: Making an Informed Choice. Quality & Quantity (53); 1051-1074 // Giesselmann M, Schmidt-Catran, AW. 2020. Interactions in fixed effects regression models. Sociological Methods & Research, 1–28. https://doi.org/10.1177/0049124120914934 // Heisig JP, Schaeffer M, Giesecke J. 2017. The Costs of Simplicity: Why Multilevel Models May Benefit from Accounting for Cross-Cluster Differences in the Effects of Controls. American Sociological Review 82 (4): 796–827. // Hoffman L. 2015. Longitudinal analysis: modeling within-person fluctuation and change. New York: Routledge
 </div>
 
 
@@ -562,7 +565,6 @@ Action: where the rubber (does not) meet the road and carbon is spared. Here, we
 
 - See our variables at in the second link (the spreadsheet) at: https://www.psych.auckland.ac.nz/en/about/new-zealand-attitudes-and-values-study/nzavs-tech-docs.html
 
-- More analyses at: https://github.com/jacopastorius/nzavs_environment
 </div>
 
 ## Climate sacrifice behaviours| political conservativism between 
@@ -655,15 +657,15 @@ Substantial information in this dataset and many "natural experiments" -- the de
 
 - Dom Johnson, Oxford University, for the idea to look at the social consequences of religion and ecology. 
 
-- Chris G Sibley, University of Auckland for leading the NZAVS. 
+- Chris G Sibley, University of Auckland for starting & leading the NZAVS. 
 
-- The 40 - 60 NZAVS collaborators working to keep the study going, including *Donnie Davis* (virtue project co-leader), Daryl Van Tongeren & Ev Worthington (collaborators).
+- The 40 - 60 NZAVS collaborators working to keep the study going, including *Donnie Davis* (virtue project co-investigator), Daryl Van Tongeren & Ev Worthington (collaborators).
 
-- Templeton Religion Trust Grant 0196 for their financial support
+- Templeton Religion Trust Grant 0196 for their financial support.
 
-- *You* for your attention and interest
+- *You* for your attention and interest!
 
-- comments/interest to joseph.bulbulia@vuw.ac.nz  (more analyses at: https://github.com/jacopastorius/nzavs_environment)
+- Comments/interest to joseph.bulbulia@vuw.ac.nz  (some further analyses at: https://github.com/jacopastorius/nzavs_environment)
 
 ## 
 
